# 2048

./: 2048.py  CMakeLists.txt  readme.md
src/: main.cpp
src/ECS/: Component.hpp  ECS.hpp  EntityManager.hpp
src/Error/: Error.hpp
src/Game/: Core.hpp  Enum.hpp
src/MyRayLib/: MyRayLib.hpp
src/Renderer/: RectangleRenderer.hpp  Renderer.hpp  TextRenderer.hpp
